# kscreenlocker

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  ConfigureChecks.cmake  KScreenLockerConfig.cmake.in  README.pam  ScreenSaverDBusInterfaceConfig.cmake.in  abstractlocker.cpp  abstractlocker.h  ck-unlock-session.cmake  config-X11.h.cmake  config-kscreenlocker.h.cmake  config-unix.h.cmake  config-workspace.h.cmake  globalaccel.cpp  globalaccel.h  greeterserver.cpp  greeterserver.h  interface.cpp  interface.h  kscreenlocker.notifyrc  kscreensaversettings.cpp  kscreensaversettings.h  ksldapp.cpp  ksldapp.h  logind.cpp  logind.h  powermanagement.cpp  powermanagement.h  powermanagement_inhibition.cpp  powermanagement_inhibition.h  waylandlocker.cpp  waylandlocker.h  waylandserver.cpp  waylandserver.h  x11info.h  x11locker.cpp  (+1 more)
appiumtests/: CMakeLists.txt  fallbacklocktest.py.in
autotests/: CMakeLists.txt  fakelogind.cpp  fakelogind.h  keyboardgrabber.cpp  ksldtest.cpp  logindtest.cpp  noscreens.cpp  pamtest.cpp  pointergrabber.cpp  x11lockertest.cpp
autotests/data/: test_db  test_service  test_service.in
cmake/: FindConsoleKit.cmake  FindSeccomp.cmake  Findloginctl.cmake
dbus/: org.kde.screensaver.xml
greeter/: CMakeLists.txt  Messages.sh  abstractauthenticators.cpp  abstractauthenticators.h  authenticator.cpp  authenticator.h  authenticatorsstate.h  fallbacktheme.qrc  greeterapp.cpp  greeterapp.h  greeterclient.cpp  greeterclient.h  kwinglplatform.cpp  kwinglplatform.h  lnf_integration.cpp  lnf_integration.h  main.cpp  noaccessnetworkaccessmanagerfactory.cpp  noaccessnetworkaccessmanagerfactory.h  noninteractiveauthenticatortype.h  pamauthenticator.cpp  pamauthenticator.h  pamauthenticatormodel.cpp  pamauthenticatormodel.h  pamauthenticators.cpp  pamauthenticators.h  powermanagement.cpp  powermanagement.h  seccomp_filter.cpp  seccomp_filter.h  types.h  wallpaper_integration.cpp  wallpaper_integration.h
greeter/autotests/: CMakeLists.txt  authenticatortest.cpp  fakekcheckpass.c  killtest.cpp  seccomp_test.cpp
greeter/fallbacktheme/: AccelButton.qml  Greeter.qml  KeyState.qml  LockScreen.qml  PasswordSync.qml  SessionSwitching.qml
greeter/themes/org.kde.passworddialog/: metadata.desktop
kcfg/: kscreenlockersettings.kcfg  kscreensaversettingsbase.kcfgc
kcheckpass/: CMakeLists.txt  checkpass_pam.c  checkpass_shadow.c  kcheckpass-enums.h  kcheckpass.c  kcheckpass.h
kcm/: CMakeLists.txt  Messages.sh  kcm.cpp  kcm.h  kcm.ui  kcm_screenlocker.desktop  kcm_screenlocker.json  kscreenlockerdata.cpp  kscreenlockerdata.h  lnfconfig.qml  resources.qrc  screenlocker.desktop  selectimagebutton.cpp  selectimagebutton.h  wallpaperconfig.qml
kcm/package/: metadata.desktop
kcm/package/contents/ui/: Appearance.qml  LnfConfig.qml  WallpaperConfig.qml  main.qml
kcm/ui/: Appearance.qml  ComboBoxWithCustomValue.qml  DurationPromptDialog.qml  LnfConfig.qml  ShellConfig.qml  WallpaperConfig.qml  main.qml
layershell/: CMakeLists.txt  layer-shell.json  qwaylandlayershell.cpp  qwaylandlayershell_p.h  qwaylandlayershellintegration.cpp  qwaylandlayershellintegration_p.h  qwaylandlayershellintegrationplugin.cpp  qwaylandlayersurface.cpp  qwaylandlayersurface_p.h
po/ar/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/ast/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/az/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/bg/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/bs/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/ca/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/ca@valencia/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/cs/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/da/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/de/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/el/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/en_GB/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/eo/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/es/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/et/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/eu/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/fi/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/fr/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/ga/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/gl/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/he/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/hi/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/hu/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/ia/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/id/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/is/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/it/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/ja/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/ka/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/kk/: kscreenlocker.po  kscreenlocker_greet.po
po/ko/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/lt/: kcm_screenlocker.po  kscreenlocker.po  kscreenlocker_greet.po
po/lv/: kcm_screenlocker.po  (+2 more)
protocols/: ksld.xml
settings/: CMakeLists.txt  appearancesettings.cpp  appearancesettings.h  kscreenlockersettings.kcfg  kscreensaversettings.cpp  kscreensaversettings.h  kscreensaversettingsbase.kcfgc  lnf_integration.cpp  lnf_integration.h  shell_integration.cpp  shell_integration.h  wallpaper_integration.cpp  wallpaper_integration.h
tests/: CMakeLists.txt  README.md  kcheckpass_test.cpp  kcheckpass_test.qml  kscreenlocker_main.cpp  powermanagement.qml  powermanagementtest.cpp
(+81 files in other folders)
